# pdf-rs

./: Cargo.toml  LICENSE  README.md  README_zh.md
encoding/: MacExpert  MacRoman  PDFDoc  Standard  WinAnsi
src/: bytes.rs  catalog.rs  constants.rs  date.rs  document.rs  encoding.rs  error.rs  filter.rs  helper.rs  lib.rs  objects.rs  page.rs  parser.rs  pstr.rs  sequence.rs  tokenizer.rs  utils.rs  vpdf.rs
tests/: document.rs  structure.rs  test.rs
