## Here's my code:
[package]
name = "pdf-rs"
version = "0.1.6-dev"
edition = "2024"
authors = ["Bojun Yang <gzyangkui@qq.com>"]
description = "A PDF parsing library written in Rust"
repository = "https://github.com/LeoPlus1024/pdf-rs"
license = "Apache-2.0"
keywords = ["pdf", "parser", "rust", "parsing"]
categories = ["parsing", "encoding", "text-processing"]
readme = "README.md"
documentation = "https://docs.rs/pdf-rs"
homepage = "https://github.com/LeoPlus1024/pdf-rs"
exclude = [
    "document/*",
    "tests/*",
]

[[test]]
name = "structure"
path = "tests/structure.rs"

[[test]]
name = "document"
path = "tests/document.rs"

[dependencies]
thiserror = "2.0.17"

[package.metadata.docs.rs]
all-features = true